HEAD
	+ Extracted vdomain selection for outgoing mail to a new configuration
	  model named Configuration
	+ Added noMultipleOUSupportComponent support
3.5
	+ Set version to 3.5
	+ Allow openchange working with old ldb/tdb backends (upgrade from 3.3)
	+ Allow ActiveSync setup if z-push or sogo-activesync are installed
3.4.1
	+ Generate master password for IMAP access
3.4
	+ Avoid to mark webadmin as changed
	+ Update nginx template to allow access to /ews/oof
	+ Added UI message with sogo webmail interface location
	+ Sogo webmail shared contacts unified. Contacts working properly
	+ Use the new EBox::Samba::Ldbobject::isCritical method
	+ Contacts are now shown at the webmail interface
	+ Zentyal internal accounts hidden from webmail interface
	+ Save config if it changes in migration between versions
	+ Adapt sogo.conf to work only with ou=Users, fixes login problem
	+ Don't allow to remove outgoing mail virtual domain
	+ Added rpcproxy service
	+ Provision openchangedb with mysql as backend
	+ Migrated to use Plack / PSGI API instead of the CGI one
	+ Remove obsolete sope dependency
	+ Added rpcproxy service to zentyal-webserver for Outlook Anywhere
	+ Calendar invitations now sent via email by default
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
	+ Using Zentyal MySQL confile template
	+ Extracted vdomain selection for outgoing mail to a new configuration
	  model named Configuration
	+ Better user addon integration
	+ Fixed bug which not enabled new user accounts when using different mail domain than AD domain
	+ Prevent OpenChange provision if we don't have access to update the
	  schema or it's already extended by another OpenChange / Exchange
	  previous installation.
	+ Clean all previous data before enabling the module
	+ Fix regression hiding from module status
	+ Fixed migration form that is missing a .js file to work
	+ Hide openchange service status from the dashboard and linked it status