@@ -1,4 +1,5 @@
 HEAD
+	+ Depend on zentyal-users instead of zentyal-samba
 	+ Extracted vdomain selection for outgoing mail to a new configuration
 	  model named Configuration
 	+ Added noMultipleOUSupportComponent support
